testdata/baselines/reference/submodule/conformance/jsdocTemplateTag7.errors.txt
a.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(2,14): error TS1277: 'const' modifier can only appear on a type parameter of a function, method or class
a.js(9,12): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(12,14): error TS1273: 'private' modifier cannot appear on a type parameter


==== a.js (4 errors) ====
    /**
    ~~~
     * @template const T
    ~~~~~~~~~~~~~~~~~~~~
                 ~~~~~
!!! error TS1277: 'const' modifier can only appear on a type parameter of a function, method or class
     * @typedef {[T]} X
    ~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    
    
    /**
    ~~~
     * @template const T
    ~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    class C { }
    ~~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
               
    
    
    /**
    ~~~
     * @template private T
    ~~~~~~~~~~~~~~~~~~~~~~
                 ~~~~~~~
!!! error TS1273: 'private' modifier cannot appear on a type parameter
     * @param {T} x
    ~~~~~~~~~~~~~~~
     * @returns {T}
    ~~~~~~~~~~~~~~~
     */
    ~~~
    function f(x) {
    ~~~~~~~~~~~~~~~
        return x;
    ~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    